# odysseus

./: CMakeLists.txt  README.md
.github/workflows/: gcc_compiler.yml
docs/source/: conf.py  index.rst
ext/: circe.cmake
odysseus/containers/: object_pool.h
odysseus/debug/: assert.h  debug.h  result.h
odysseus/memory/: double_stack_allocator.cpp  double_stack_allocator.h  mem.cpp  mem.h  pool_allocator.cpp  pool_allocator.h  stack_allocator.cpp  stack_allocator.h
tests/: CMakeLists.txt  main.cpp  memory_tests.cpp
